capsule network blog post

--- a/_config.yml
+++ b/_config.yml
@@ -253,6 +253,11 @@ defaults:
       comments: # true
       share: true
       related: true
+   # Table
+      toc: true
+      toc_label: "Capsule Network"
+      toc_icon: "bookmark"
+
 
   # _pages
   - scope:
